# hashmoney

./: Cargo.toml  README.adoc  README.md  flake.nix
src/: lib.rs  main.rs  parser.rs  test.rs  utils.rs
