[package]
name = "hashmoney"
description = "Yet another hashcash rust implementation, with wasm support, variable date width and multiple minting strategies but no version 0 support."
version = "1.0.0"
edition = "2024"
authors = ["Leonardo <128467278+le0flo@users.noreply.github.com>"]
license = "LGPL-3.0"
keywords = ["hashcash", "hash", "cash", "antispam", "hashmoney", "crypto"]
repository = "https://github.com:/le0flo/hashmoney"

[dependencies]
rand = { version = "0.9" }
byteorder = { version = "1" }
base64 = { version = "0.22" }
sha1 = { version = "0.10" }
chrono = { version = "0.4" }
getrandom = { version = "0.3" }

[features]
wasm = ["getrandom/wasm_js"]
