[package]
name = "hashmoney"
description = "Yet another hashcash implementation, with wasm support, variable date width and multiple minting strategies."
version = "2.0.0"
edition = "2024"
authors = ["Leonardo <noreply@leoflo.me>"]
license = "LGPL-3.0"
repository = "https://github.com:/le0flo/hashmoney"
documentation = "https://docs.rs/hashmoney"
keywords = ["hashcash", "hashmoney", "crypto", "spam", "pow"]

[lib]
name = "hashmoney"
path = "src/lib.rs"

[[bin]]
name = "hm"
path = "src/main.rs"

[dependencies]
rand = { version = "0.9" }
byteorder = { version = "1" }
base64 = { version = "0.22" }
sha1 = { version = "0.10" }
chrono = { version = "0.4" }
getrandom = { version = "0.3" }

clap = { version = "4.5" }

[features]
wasm = ["getrandom/wasm_js"]
